fix: header height on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -55,6 +55,8 @@
     }
 
     @media (max-width: 800px) {
+        height: calc(100vh - 5rem);
+
         h1 {
             font-size: 2.2rem;
         }
