--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -20,6 +20,8 @@
     }
 
     @media (max-width: 800px) {
+        height: calc(100vh - 5rem);
+
         h1 {
             font-size: 2.2rem;
         }
